; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_options.c_options_postprocess_mutate_invariant.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_options.c_options_postprocess_mutate_invariant.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.options = type { i64, i32, i32, i64, i32, i64*, i64, i64, %struct.TYPE_2__, i64, i32, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@INETD_NOWAIT = common dso_local global i64 0, align 8
@DEFAULT_PKCS11_MODULE = common dso_local global i64 0, align 8
@DEV_TYPE_TAP = common dso_local global i32 0, align 4
@DEV_TYPE_TUN = common dso_local global i32 0, align 4
@IPW32_SET_IPAPI = common dso_local global i32 0, align 4
@IPW32_SET_MANUAL = common dso_local global i32 0, align 4
@MODE_POINT_TO_POINT = common dso_local global i64 0, align 8
@MODE_SERVER = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.options*)* @options_postprocess_mutate_invariant to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @options_postprocess_mutate_invariant(%struct.options* %0) #0 {
  %2 = alloca %struct.options*, align 8
  store %struct.options* %0, %struct.options** %2, align 8
  %3 = load %struct.options*, %struct.options** %2, align 8
  %4 = getelementptr inbounds %struct.options, %struct.options* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @INETD_NOWAIT, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load %struct.options*, %struct.options** %2, align 8
  %10 = getelementptr inbounds %struct.options, %struct.options* %9, i32 0, i32 1
  store i32 1, i32* %10, align 8
  br label %11

11:                                               ; preds = %8, %1
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
